@startuml
left to right direction
title Módulo Hóspede - Design de Componentes
skinparam componentStyle uml2
skinparam package {
  backgroundColor #E8EAF6
  borderColor #303F9F
}

' ==========================================================
' 1. DEFINIÇÃO DAS CAMADAS E INTERFACES
' ==========================================================

package Apresentacao <<Camada do Usuário>> {
    interface InterfaceApresentacaoHospede as IAHospede
    [ModuloApresentacaoHospede] as MAHospede
}

package Servico <<Camada Lógica>> {
    interface InterfaceServicoHospede as ISHospede
    [ModuloServicoHospede] as MSHospede
}

package Persistencia <<Camada de Acesso>> {
    interface InterfaceAcessoInformacao as IAI
    [ModuloAcessoInformacao] as MAI
}

[BD / STL] as DadosBrutos

' ==========================================================
' 2. RELAÇÕES DE REALIZAÇÃO (BOLA - O FORNECEDOR)
' ==========================================================
IAHospede o-- MAHospede : <<Controladora Apresentação>>
ISHospede o-- MSHospede : <<Controladora Serviço>>
IAI o-- MAI : <<Controladora Acesso Informação (CAI)>>


' ==========================================================
' 3. RELAÇÕES DE USO (SOQUETE - O CLIENTE)
' ==========================================================
' Apresentação depende de Serviço
MAHospede ..> ISHospede : Depende (CRUD Hóspede)

' Serviço depende de Persistência
MSHospede ..> IAI : Depende (Buscar Dados)

' Persistência usa os Dados Brutos
MAI ..> DadosBrutos : Usa (READ/WRITE)

@enduml